--- a/硬编码超级列表框.vcxproj.filters
+++ b/硬编码超级列表框.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClInclude Include="pch.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="DuozijieBianMa.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="硬编码超级列表框.cpp">
@@ -42,6 +45,9 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="pch.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="DuozijieBianMa.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
