--- a/硬编码超级列表框.vcxproj
+++ b/硬编码超级列表框.vcxproj
@@ -188,6 +188,7 @@
     <ClInclude Include="pch.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="targetver.h" />
+    <ClInclude Include="VLE.h" />
     <ClInclude Include="硬编码超级列表框.h" />
     <ClInclude Include="硬编码超级列表框Dlg.h" />
   </ItemGroup>
@@ -199,6 +200,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="VLE.cpp" />
     <ClCompile Include="硬编码超级列表框.cpp" />
     <ClCompile Include="硬编码超级列表框Dlg.cpp" />
   </ItemGroup>
