--- a/硬编码超级列表框.vcxproj.filters
+++ b/硬编码超级列表框.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClInclude Include="DuozijieBianMa.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="VLE.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="硬编码超级列表框.cpp">
@@ -48,6 +51,9 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="DuozijieBianMa.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="VLE.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
