--- a/硬编码超级列表框.vcxproj
+++ b/硬编码超级列表框.vcxproj
@@ -183,6 +183,7 @@
     </ResourceCompile>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="config.h" />
     <ClInclude Include="DuozijieBianMa.h" />
     <ClInclude Include="framework.h" />
     <ClInclude Include="pch.h" />
