--- a/硬编码超级列表框.vcxproj.filters
+++ b/硬编码超级列表框.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClInclude Include="VLE.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="config.h">
+      <Filter>源文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="硬编码超级列表框.cpp">
