--- a/硬编码超级列表框.vcxproj
+++ b/硬编码超级列表框.vcxproj
@@ -186,6 +186,7 @@
     <ClInclude Include="config.h" />
     <ClInclude Include="DuozijieBianMa.h" />
     <ClInclude Include="framework.h" />
+    <ClInclude Include="GlobalCommands.h" />
     <ClInclude Include="pch.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="targetver.h" />
@@ -195,6 +196,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="DuozijieBianMa.cpp" />
+    <ClCompile Include="GlobalCommands.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
