--- a/硬编码超级列表框.vcxproj.filters
+++ b/硬编码超级列表框.vcxproj.filters
@@ -42,6 +42,9 @@
     <ClInclude Include="config.h">
       <Filter>源文件</Filter>
     </ClInclude>
+    <ClInclude Include="GlobalCommands.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="硬编码超级列表框.cpp">
@@ -57,6 +60,9 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="VLE.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="GlobalCommands.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
